# core-v-xif

./: .readthedocs.yaml  Bender.yml  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: Specification-review.yml  bug.yml  cv-x-if-v1.0.0-rc.1-specification-review.yml  task.yml
.github/workflows/: ci.yml
doc/: accelerator-adapter.md  accelerator-interconnect.md  accelerator-predecoder.md  c-interface.md  index.md  open-questions.md  operating-principle.md  x-interface.md
docs/: README  Readme.md  requirements.txt
docs/source/: conf.py  index.rst  intro.rst  preface.rst  x_ext.rst
include/acc_interface/: assign.svh  typedef.svh
src/: LICENSE  acc_adapter.sv  acc_adapter_intf.sv  acc_interconnect.sv  acc_interconnect_intf.sv  acc_intf.sv  acc_pkg.sv  acc_predecoder.sv  acc_predecoder_intf.sv  acc_rvb_pkg.sv  acc_test.sv  core_v_xif.sv  core_v_xif_pkg.sv
src/test/: Makefile  test.sv  test.vlt
test/: acc_adapter_tb.sv  acc_interconnect_tb.sv
util/: run_vsim.sh
